Adição de enpoint para ver o status da api. Adição de redirecionamento da documentação. Ajuste na documentação.
